# PorscheAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic_agent.py
porsche_agent/: __init__.py  agent.py  builtin_tools.py  cli.py  config.py  llm.py  tools.py
porsche_agent/memory/: __init__.py  context.py  long_term.py  short_term.py
tests/: test_agent.py  test_config.py  test_memory.py  test_tools.py
vectorstore/: go.mod  main.go
vectorstore/store/: store.go
