[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porsche-agent"
version = "0.1.0"
description = "Minimal agent framework for LLM-powered task automation"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]

[project.scripts]
porsche = "porsche_agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
